Fix gap in projectSection

--- a/src/modules/Project/Project.module.css
+++ b/src/modules/Project/Project.module.css
@@ -85,6 +85,8 @@
   font-size: var(--s);
 }
 .project__opcion {
+  padding-top: 10px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -109,7 +111,7 @@
     margin-inline: 10px;
     margin-block: 10px;
 
-    gap: 20px;
+    gap: 10px;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
   }
@@ -120,6 +122,9 @@
     max-height: 100px;
   }
   .project__opcion {
-    padding-top: 10px;
+    padding-top: 5px;
+  }
+  .project__right {
+    gap: 5px;
   }
 }
